--- a/css/style.css
+++ b/css/style.css
@@ -95,7 +95,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', end
 	transition: border-bottom 0.5s transform 1s;
 }
 .top-nav ul li{
-	transition:transform 1s;
+	transition:transform 0.5s;
 
 }
 .top-nav ul li:not(.active) a:hover{
@@ -108,19 +108,18 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', end
 }
 .top-nav ul li:not(.active):hover{
 		box-shadow: 0px 10px 30px #0E5DCC;
-		//transform: skew(7deg, -7deg) scale(1.35,1.35);
+		//transform: skew(4deg, 4deg) scale(1.35,1.35);
 
 }
 .top-nav ul li.active{
 	
-	border-bottom: 1px white solid;
-	font-size: 1em;
-	transform: scale(1.5) skew(-10deg, -10deg);
+	border-bottom: 3px white groove;
+	transform: skew(-10deg, -10deg);
 		
 }
 .top-nav ul li.active a{
 	font-weight: bolder;
-	font-size: 1.8em;
+	
 }
 .top-nav ul{
 		/*transition: font-size 1s;*/
