--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -123,20 +123,19 @@ html, body{
     margin: 0 auto;
 }
 
-.menu-content > div{
-    display: flex;
+.menu-content > div > *{
+    display: inline-block;
+    color: white;
 }
 .nomes-locais{
-    display: flex;
-    align-items: center;
-}
-.nomes-locais div{
-    color: white;
-    font-size: 1.2em;
-    margin-left: 1em;
+    
     
 }
-.nomes-locais span:not(:nth-child(3)):after{
+.nomes-locais div{
+    font-size: .9em;
+    display: inline-block;
+}
+.nomes-locais div:not(:nth-child(3)):after{
     
 }
 
