--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -127,6 +127,9 @@ html, body{
     display: inline-block;
     color: white;
 }
+.menu-content > div{
+    padding: 0 !important;
+}
 .nomes-locais{
     
     
