--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,7 +1,12 @@
+
 html, body{
     overflow-x: hidden;
 }
 
+#map{
+    width: 100%;
+    height: 300px;
+}
 .img-icon{
     border: solid red 1px;
 }
