--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2,7 +2,15 @@
 html, body{
     overflow-x: hidden;
 }
+.compass{
+    display: flex;
+    align-content: center;
+    justify-content: center;
+}
 
+.esconde{
+    opacity: 0;
+}
 #map{
     width: 100%;
     height: 300px;
@@ -88,7 +96,7 @@ html, body{
 #loading{
     color: white;
     font-size: 10em;
-    animation: load 1s infinite;
+    animation: load .8s infinite;
 }
 @-webkit-keyframes load{
     from    {transform: rotateZ(0deg);}
