--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -7,6 +7,11 @@ html, body{
     align-content: center;
     justify-content: center;
 }
+.rn-carousel{
+    height: 370px;
+    
+}
+
 
 .esconde{
     opacity: 0;
