--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -6,10 +6,18 @@ html, body{
     display: flex;
     align-content: center;
     justify-content: center;
+    position: relative;
+}
+.compass img:not(:last-child){
+    position: absolute;
+    opacity: .5;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
 }
 .rn-carousel{
     height: 370px;
-    
+
 }
 
 
@@ -202,6 +210,6 @@ html, body{
     background-repeat: no-repeat;
     width: 60px;
     height: 60px;
-    
-    
+
+
 }
