--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,7 +1,7 @@
 body{
     background: url(../img/beach.jpg);
-    background-size: 100% 100%;
-
+    background-attachment: fixed;
+    
 }
 body *{
     color: white;
