--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -52,6 +52,7 @@ html, body{
     min-height: 100vh;
     background-color: rgba(34,34,34,0.5);
     z-index: -10;
+    
 
 
 }
@@ -143,7 +144,7 @@ html, body{
 
 
 .menu-content{
-    padding: 0;
+    padding: .5em 0;
     background-color: rgba(34,34,34,0.5);
     z-index: 10;
     width: 110%;
@@ -264,4 +265,15 @@ html, body{
 
 .chart-bar .chart-colours{
 
+}
+
+.legenda-direcoes{
+    display: flex;
+    align-content: center;
+    justify-content: center;
+}
+.legenda-direcoes > *{
+    margin: 0 .2em;
+    width: 35px;
+    height: 35px;
 }
