--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -27,7 +27,7 @@ html, body{
     margin: 0 auto;
 }
 .rn-carousel{
-    height: 370px;
+    height: 305px;
 
 }
 
@@ -221,7 +221,7 @@ html, body{
     top: 50%;
     bottom: 50%;
     margin: auto auto;
-    opacity: .8;
+    opacity: .6;
     box-shadow: 0px 0px 10px #222222;
 
 }
@@ -238,7 +238,14 @@ html, body{
 .table-semanal td{
     text-align: center;
 }
-
+.table-semanal td{
+    text-align: center;
+    padding: 4px 0px !important;
+}
+.table-semanal tr:nth-child(2) td{
+    font-size: 1.5em;
+    
+}
 
 #line{
 
@@ -253,10 +260,13 @@ html, body{
     align-content: center;
     justify-content: center;
 }
-.legenda-direcoes > *{
+.legenda-direcoes > span{
+    
+}
+.legenda-direcoes > div{
     margin: 0 .2em;
-    width: 35px;
-    height: 35px;
+    width: 20px;
+    height: 20px;
 }
 
 
