--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -253,7 +253,7 @@ html, body{
     
 }
 .table-semanal tr:nth-child(even){
-    background-color: #555555; 
+    background-color: rgba(51, 122, 183, 0.7); 
 }
 #line{
 
