--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,4 +1,4 @@
-body{
+/*body{
     background: url(../img/beach.jpg);
     background-attachment: fixed;
 
@@ -292,5 +292,129 @@ html, body{
     #map{
         height: 200px;
     }
+}*/
+
+
+
+.menu{
+    position: fixed;
+    width: 50%;
+    height: 100%;
+    background-color: #343434;
+    z-index: 10;
 }
 
+.menu-hide .menu{
+    left: 100%;
+}
+
+.over-layer{
+    position: absolute;
+    top: 0;
+    left: 0;
+
+}
+.menu-show .over-layer{
+    width: 100%;
+    height: 100%;
+    z-index: 5;
+    background-color: rgba(0,0,0,.7);
+}
+
+
+.menu-top{
+    position: fixed;
+    height: 15vh;
+    background-color: blue;
+    width: 100%;
+    z-index: 1;
+    color: white;
+}
+
+.menu-top > div:nth-child(1){
+    display: flex;
+    height: 50%;
+    align-content: center;
+
+
+}
+.tab-menu{
+    height: 50%;
+}
+.tab-menu ul{
+
+    margin: 0;
+    padding: 0;
+
+}
+.tab-menu li{
+    display: inline-block;
+    
+}
+.tab-menu li a:visited, .tab-menu li a:link{
+    color: white;
+    text-decoration: none;
+    font-size: 1.2em;
+    padding-right: 1em; 
+}
+
+
+.tab-content{
+    margin-top: 15vh;
+    height: 75vh;
+    overflow-x: hidden;
+}
+.tab-content-in{
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+.tab-content-in > div{
+    overflow-y: auto;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+
+}
+.tab-content-animate{
+    transition: linear all .6s
+}
+
+
+.loading{
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,.7);
+    z-index: 6;
+
+}
+
+.loading > span{
+    color: white;
+    font-size: 10em;
+    display: table;
+    margin: 0 auto;
+    top: 50%;
+    bottom: 50%;
+}
+
+#map{
+    width: 100%;
+    height: 300px;
+}
+
+.rn-carousel{
+    height: 450px;
+}
+
+
+.container{
+    background-color: rgba(230,230,230,1); 
+}
+.rodape{
+    height: 10vh;
+    overflow: hidden;
+}
